# hackathon-dc-aegis

./: .env.example  .gitignore  README.md  pyproject.toml
aegis-dashboard/: PROJECT_SUMMARY.md  README.md  requirements.txt  testmcp.py  twitter_data_covid.csv  twitter_search.py  twitter_volume_analysis.html  twitter_volume_analysis.py  twitter_weekly_volumes.csv
aegis-dashboard/config/: config.py
aegis-dashboard/dashboards/: main_dashboard.py
aegis-dashboard/dashboards/pages/: 1_Federal_Policy_Makers.py  2_Healthcare_Professionals.py  3_State_Government.py
aegis-dashboard/data/collected/: Master_data_covid_flu_rsv.csv  news_20250604_0202.json  social_analysis_results.json
aegis-dashboard/data/simulated/: cdc_simulated_2021-12-01_2022-03-31.csv  economic_2021-12-01_2022-03-31.csv  google_trends_2021-12-01_2022-03-31.csv  mobility_2021-12-01_2022-03-31.csv  reddit_2021-12-01_2022-03-31.csv
aegis-dashboard/data_collection/: data_collector.py  requirements.txt  supplementary_data.py
aegis-dashboard/models/: advanced_analytics.py  predictive_models.py  recommendation_agent.py
aegis-dashboard/scout_agent/: hero_sourcer_agent.py  social_analysis_agent.py
data/: flu_clean.csv  flu_raw.csv  flu_social_media_15k.csv  measles.csv  measles_social_media_volume.csv
src/: health_data.py  llm_utils.py  social_media.py  streamlit_app.py  utils.py
src/dashboards/: 03_data_agent.py  agent_dashboard.py  dashboard.py  generative_dashboard.py
src/notebooks/: cdc_agent.ipynb  data_ingestion.ipynb  flu.ipynb  merge.ipynb
